Pascal/test/cohadar/pascal/errors/break_outside.pas
program test;
var i:integer;
begin
	for i := 1 to 10 do begin
		write(i);
	end;
	break;
	while (true) do begin
		i := i - 1;
		write(i);
	end;
end.
